--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,20 +19,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/water" />
 
-    <ImageView
+
+    <de.hdodenhof.circleimageview.CircleImageView
+
         android:id="@+id/avatar"
-        android:layout_width="0dp"
+        android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:contentDescription="TODO"
-        android:scaleType="fitCenter"
+        android:src="@drawable/beauty"
+        app:civ_border_color="@android:color/white"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/beauty"
-        tools:srcCompat="@drawable/beauty" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/userName"
