--- a/app/src/main/res/layout/activity_new_sentence.xml
+++ b/app/src/main/res/layout/activity_new_sentence.xml
@@ -1,26 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
-        android:id="@+id/edit_sentence"
+        android:id="@+id/edit_japanese_sentence"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/big_padding"
+        android:layout_marginBottom="@dimen/big_padding"
+        android:focusedByDefault="true"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_sentence"
         android:inputType="textAutoComplete"
-        android:padding="@dimen/small_padding"
-        android:layout_marginBottom="@dimen/big_padding"
-        android:layout_marginTop="@dimen/big_padding"
+        android:padding="@dimen/big_padding"
         android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/edit_translation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/big_padding"
+        android:layout_marginBottom="@dimen/big_padding"
+        android:fontFamily="sans-serif-light"
+        android:hint="@string/hint_translation"
+        android:inputType="textAutoComplete"
+        android:padding="@dimen/big_padding"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/edit_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/big_padding"
+        android:layout_marginBottom="@dimen/big_padding"
+        android:fontFamily="sans-serif-light"
+        android:hint="@string/hint_hint"
+        android:inputType="textAutoComplete"
+        android:padding="@dimen/big_padding"
+        android:textSize="18sp" />
+
 
     <Button
         android:id="@+id/button_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/big_padding"
         android:background="@color/colorPrimary"
         android:text="@string/button_save"
-        android:textColor="@android:color/holo_orange_dark" />
+        android:textColor="@android:color/white" />
 </LinearLayout>
