--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,13 +1,40 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2017 Google Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License. -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/idTextView"
         style="@style/word_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light" />
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/japaneseTextView"
+        style="@style/word_title"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_weight="5" />
+
+    <TextView
+        android:id="@+id/translationTextView"
+        style="@style/word_title"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_weight="5" />
 </LinearLayout>
