--- a/app/src/main/res/layout/activity_daily_training_session.xml
+++ b/app/src/main/res/layout/activity_daily_training_session.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="32dp"
-        android:text="@string/refresh"
+        android:text="@string/Reload"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -121,8 +121,8 @@
 
                 <Switch
                     android:id="@+id/showJAswitch"
-                    android:layout_width="39dp"
-                    android:layout_height="27dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:checked="true"
