--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -12,7 +12,9 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -21,20 +23,41 @@ limitations under the License. -->
         android:id="@+id/idTextView"
         style="@style/word_title"
         android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_weight="1" />
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="1"
+        android:backgroundTint="#4D2196F3"
+        android:fadeScrollbars="true"
+        android:scrollbarStyle="outsideInset"
+        android:verticalScrollbarPosition="right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/japaneseTextView"
         style="@style/word_title"
         android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_weight="5" />
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_weight="5"
+        android:backgroundTint="#262196F3"
+        android:scrollbarSize="8dp"
+        android:verticalScrollbarPosition="right"
+        app:layout_constraintEnd_toStartOf="@+id/translationTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idTextView" />
 
     <TextView
         android:id="@+id/translationTextView"
         style="@style/word_title"
         android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_weight="5" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_weight="5"
+        android:backgroundTint="#262196F3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/japaneseTextView"
+        app:layout_constraintTop_toBottomOf="@+id/idTextView" />
+</androidx.constraintlayout.widget.ConstraintLayout>
